tdf#135021 if the input width is changed, rerun the callbacks

if the widget triggering the change is the width widget and this callback sets
a different value to the width widget, then rerun the callback using the width
widget to end up in a state consistent with the width widget value.

gtk already resends value-changed if the value of the widget changed during the
callback so this ends up aligning the vcl behaviour to the gtk one which appears
desirable in this case

Change-Id: I32d0e1bb17190279efc552781851e5a18b417154
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99635
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>